Avoid JPMS warnings for AsciiDoctor task